Add missing setup for GL_EXT_window_rectangles

Followup to http://crrev.com/c/741866

Bug: 781418, 644265
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I7bca652054bc7af2fd876b03ec43f4ef08f50405
Reviewed-on: https://chromium-review.googlesource.com/758969
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Kai Ninomiya <kainino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515093}
Former-commit-id: 308174ca7345d19763e9a97181423fabf416bef2