content/test/gpu/gpu_tests/webgl2_conformance_expectations.py
@@ -737,10 +737,6 @@ class WebGL2ConformanceExpectations(WebGLConformanceExpectations):
     # This test causes a lost device and then the next test fails.
     self.Skip('conformance2/rendering/blitframebuffer-size-overflow.html',
         ['linux', ('nvidia', 0x1cb3)], bug=709320)
-    # Failing reliably on tryservers.
-    self.Fail('conformance2/offscreencanvas/' +
-        'offscreencanvas-transfer-image-bitmap.html',
-        ['linux', ('nvidia', 0x1cb3)], bug=781418)
     # Observed flaky on Swarmed bots. Some of these were directly
     # observed, some not. We can't afford any flakes on the tryservers
     # so mark them all flaky.
